# lightweight-symbolic-validator

./: .env.example  .gitignore  LICENSE  README.md  demo_migration_plan.py  pyproject.toml  validation_report.json
.cursor/: mcp.json
.cursor/rules/: discrete-structure-tool.mdc
benchmark/: __init__.py  extract.py  generate.py  llm_runner.py  pipeline.py  reference_solver.py  run_all.py  run_loop.py  validate.py
benchmark/data/: combined_results.json  results.json  results_before.json  results_comparison.json  set_no_tool.json  set_with_tool.json  variations.json
benchmark/data/seed_137/: results.json  set_no_tool.json  set_with_tool.json  variations.json
benchmark/data/seed_137/responses/no_tool/: var_001.json  var_002.json  var_003.json  var_004.json  var_005.json  var_006.json  var_007.json  var_008.json  var_009.json  var_010.json  var_011.json  var_012.json  var_013.json  var_014.json  var_015.json  var_016.json  var_017.json  var_018.json  var_019.json  var_020.json  var_021.json  var_022.json  var_023.json  var_024.json  var_025.json  var_026.json  var_027.json  var_028.json  var_029.json  var_030.json
benchmark/data/seed_137/responses/with_tool/: var_001.json  var_002.json  var_003.json  var_004.json  var_005.json  var_006.json  var_007.json  var_008.json  var_009.json  var_010.json  var_011.json  var_012.json  var_013.json  var_014.json  var_015.json  var_016.json  var_017.json  var_018.json  var_019.json  var_020.json  var_021.json  var_022.json  var_023.json  var_024.json  var_025.json  var_026.json  var_027.json  var_028.json  var_029.json  var_030.json
benchmark/letters/: evaluate.py  generate.py  llm_runner.py  run_loop.py
benchmark/letters/data/: cases.json  results.json  set_no_tool.json  set_with_tool.json
benchmark/letters/data/hard/: cases.json  meta.json  results.json  set_no_tool.json  set_with_tool.json
benchmark/letters/data/hard/responses/with_tool/: letter_006.txt
benchmark/letters/data/seed_137/: cases.json  results.json  set_no_tool.json  set_with_tool.json
examples/mcp/: README.md  cursor.json  installed.json
src/discrete_structure_tool/: __init__.py  mcp_server.py  models.py  operations.py  tool.py
src/discretevalidator/: __init__.py  core.py  mcp_server.py  migration_report.py
tests/: test_benchmark.py  test_discretevalidator_integration.py  test_extract.py  test_letter_hard.py  test_multisets.py  test_pipeline.py  test_relations.py  test_sequences.py  test_sets.py  test_validate_witness.py
tests/fixtures/: case_var_001.json  llm_plan_var_001.json  llm_response_wrapper.json
