[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discrete-structure-tool"
version = "0.1.0"
description = "Deterministic symbolic reasoning tool for sequences, sets, multisets, and relations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
mcp = [
    "mcp[cli]>=1.0",
]
benchmark = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
discretevalidator-mcp = "discretevalidator.mcp_server:main"
discrete-structure-tool-mcp = "discretevalidator.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/discrete_structure_tool", "src/discretevalidator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
